# CGALPythonLinking

./: CMakeLists.txt  out.mesh  run_test.py  testwrapper.py
include/: test.hpp
src/: test.cpp
